syntax = "proto3";

package config_proto;

option go_package = "github.com/KonstantinGasser/datalab/service.app-configuration/proto";

import "common/common.proto";

service AppConfiguration {
    rpc Init(InitRequest) returns (InitResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
}


message InitRequest {
    string tracing_ID = 1;
    string for_app = 2;
}
message InitResponse {
    int32 status_code = 1;
    string msg = 2;
}

message GetRequest {
    string tracing_ID = 1;
    common.UserTokenClaims user_claims = 2;
    string app_uuid = 3;

}
message GetResponse {
    int32 status_code = 1;
    string msg = 2;
    common.AppConfigInfo configs = 3;
}

message UpdateRequest {
    string tracing_ID = 1;
    common.UserTokenClaims user_claims = 2;
    string app_uuid =  3;
    string update_flag = 4;
    repeated common.Funnel stages = 5;
    repeated common.Campaign records = 6;
    repeated common.BtnTime btn_defs = 7;
}
message UpdateResponse {
    int32 status_code = 1;
    string msg = 2;
}
